--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-Flask
 pyautogen
 ollama
 itakello-logging
@@ -11,3 +10,6 @@ pytest
 pytest-mock
 python-dotenv
 asyncio
+Flask
+Flask-Login
+Flask-Bcrypt
